Add support for the filter clause in aggregate expressions.